Search fields render placeholder text improperly. https://bugs.webkit.org/show_bug.cgi?id=147192 <rdar://problem/21901076>

Reviewed by Alexey Proskuryakov.

Due to changes in the way AppKit renders search inputs, we must now explicitly
set the placeholder text of a search input rendered using the Mac theme to be
an empty string when rendering the search input box (not including the actual
placeholder text).

* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::setSearchCellState): Force the placeholder text of
    the NSSearchFieldCell for the Mac theme to be an empty string.


Canonical link: https://commits.webkit.org/165242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187170 268f45cc-cd09-0410-ab3c-d52691b4dbfc